# py32f030x8-zig

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.zig
cmake/: toolchain.cmake
src/: main.zig  system_py32f0xx.c
startup/: cortex-m.c  standalone.ld
